improves bw visualizations

--- a/scripts/visualization_maker.ipynb
+++ b/scripts/visualization_maker.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SymmetricNoisyRegressor, BWRun\n",
-    "from adaptive_latents.input_sources.functional import prosvd_data, clip, zscore\n",
+    "import adaptive_latents.input_sources.functional as fin\n",
     "from scipy.io import loadmat\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -24,10 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = '/home/jgould/Documents/Bubblewrap/generated/datasets/sbp/OnlineTrainingData.mat'\n",
-    "mat = loadmat(file, squeeze_me=True, simplify_cells=True)\n",
-    "data = mat['OnlineTrainingData']\n",
-    "n_channels = data[0]['SpikingBandPower'].shape[1]"
+    "import h5py\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,8 +35,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(data)-1):\n",
-    "    assert data[i+1]['ExperimentTime'][0] - data[i]['ExperimentTime'][-1] == 3"
+    "mat = loadmat(al.CONFIG['data_path'] / 'Chestek' / 'first_extraction.mat', squeeze_me=True, simplify_cells=True)\n",
+    "pre_beh = mat[\"extracted\"][0]\n",
+    "pre_A = mat[\"extracted\"][3]\n",
+    "pre_t = np.arange(A.shape[0]) #mat[\"extracted\"][4]"
    ]
   },
   {
@@ -48,51 +48,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = []\n",
-    "t = []\n",
-    "beh = []\n",
-    "for i, trial in enumerate(data):\n",
-    "    A_spacer = np.nan * np.zeros((3,n_channels))\n",
-    "    t_spacer = np.arange(1,4) + trial['ExperimentTime'][-1]\n",
-    "    beh_spacer = t_spacer * np.nan\n",
-    "    if i == len(data)-1:\n",
-    "        A_spacer = np.zeros((0,n_channels))\n",
-    "        t_spacer = []\n",
-    "        beh_spacer = []\n",
-    "    sub_A_spaced = np.vstack([trial['SpikingBandPower'], A_spacer])\n",
-    "    sub_t_spaced = np.hstack([trial['ExperimentTime'], t_spacer])\n",
-    "    sub_beh_spaced = np.hstack([trial['FingerAngle'], beh_spacer])\n",
-    "    A.append(sub_A_spaced)\n",
-    "    t.append(sub_t_spaced)\n",
-    "    beh.append(sub_beh_spaced)\n",
-    "A = np.vstack(A)\n",
-    "t = np.hstack(t) / 1000 # converts to seconds\n",
-    "beh = np.hstack(beh)\n",
     "\n",
-    "s = t > 1.260\n",
-    "A, beh, t = A[s], beh[s], t[s]\n",
-    "\n",
-    "\n",
-    "bin_size = 150\n",
-    "aug = np.column_stack([t,beh, A])\n",
-    "binned_aug = aug[aug.shape[0] % bin_size:,:].reshape(( -1, bin_size, aug.shape[1]))\n",
-    "t = binned_aug[:,:,0].max(axis=1)\n",
-    "beh = np.nanmean(binned_aug[:,:,1], axis=1)\n",
-    "A = np.nanmean(binned_aug[:,:,2:], axis=1)\n",
-    "\n",
-    "# kernel = np.exp(np.linspace(-3,0, 10))\n",
-    "# kernel /= kernel.sum()\n",
-    "# kernel = np.flip(kernel)\n",
-    "\n",
-    "# A, beh, t = clip(zscore(A), beh, t)\n",
-    "edge = 100\n",
-    "pre_pro_A = (A[edge:] - A[:edge].mean(axis=0))"
+    "if False:\n",
+    "    # pre vs smoothed\n",
+    "    %matplotlib inline\n",
+    "    # pre_A, pre_beh, pre_t, _ = al.input_sources.datasets.construct_nason20_dataset()\n",
+    "    \n",
+    "    fig,ax = plt.subplots(nrows=2)\n",
+    "    ax[0].plot(pre_t, pre_A[:,0])\n",
+    "    signal = pre_A[:,0]\n",
+    "    \n",
+    "    kernel = np.exp(np.linspace(0,-1,5))\n",
+    "    kernel /= kernel.sum()\n",
+    "    ax[1].plot(kernel)\n",
+    "    \n",
+    "    mode = 'valid'\n",
+    "    smoothed = np.convolve(kernel, signal, mode)\n",
+    "    smoothed_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_t, mode)\n",
+    "    ax[0].plot(smoothed_t,smoothed)\n",
+    "    \n",
+    "    ax[0].set_xlim([400, 435])\n",
+    "    # ax[0].set_xlim([-10, 65])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_A = fin.center_from_first_n(pre_A, 100)\n",
+    "pre_A, pre_beh, pre_t = fin.clip(pre_A, pre_beh, pre_t)\n",
+    "\n",
+    "# mode = 'valid'\n",
+    "# pre_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_A.T])\n",
+    "# pre_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_t, mode)\n",
+    "\n",
+    "A, Qs = fin.prosvd_data_with_Qs(pre_A, 7, 50)\n",
+    "A, t, beh = fin.clip(A, pre_t, pre_beh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "##### to skip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +116,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
     "pca = PCA()\n",
-    "pca.fit(pre_pro_A)\n",
+    "pca.fit(pre_A)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "var_explained = np.cumsum([0] + list(pca.explained_variance_ratio_))\n",
@@ -130,55 +138,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prosvd_data_and_Qs(input_arr, output_d, init_size):\n",
-    "    pro = proSVD(k=output_d)\n",
-    "    pro.initialize(input_arr[:init_size].T)\n",
-    "\n",
-    "    output = []\n",
-    "    old_Qs = []\n",
-    "    for i in range(init_size, len(input_arr)):\n",
-    "        obs = input_arr[i:i + 1, :]\n",
-    "        if np.any(np.isnan(obs)):\n",
-    "            output.append(np.zeros(output_d) * np.nan)\n",
-    "            continue\n",
-    "        old_Qs.append(np.array(pro.Q))\n",
-    "        pro.preupdate()\n",
-    "        pro.updateSVD(obs.T)\n",
-    "        pro.postupdate()\n",
-    "\n",
-    "        obs = obs @ pro.Q\n",
-    "\n",
-    "        output.append(obs)\n",
-    "    return np.array(output).reshape((-1, output_d)), np.array(old_Qs)\n",
-    "\n",
-    "A, Qs = prosvd_data_and_Qs(pre_pro_A, 7, 50)\n",
-    "A, t, beh = clip(A, t, beh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(nrows=2, layout=\"tight\")\n",
     "dQ = np.linalg.norm(np.diff(Qs, axis=0), axis=1)\n",
     "dt = np.diff(t)\n",
-    "ax.plot(t[:-1], dQ/dt[:,None]);\n",
-    "ax.set_ylabel(\"$\\\\frac{ \\\\Vert dQ \\\\Vert}{dt}$\");\n",
-    "ax.set_title(\"Change in proSVD vectors over time\");\n",
-    "ax.set_xlabel(\"time (s)\");"
+    "ax[0].plot(t[:-1], dQ/dt[:,None]);\n",
+    "ax[0].set_ylabel(\"$\\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
+    "ax[0].set_title(\"Change in proSVD vectors over time\");\n",
+    "ax[0].set_xlabel(\"time (s)\");\n",
+    "\n",
+    "ax[1].plot(t[:-1], np.log(dQ/dt[:,None]));\n",
+    "ax[1].set_ylabel(\"$\\\\ln \\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
+    "ax[1].set_title(\"(log scale)\");\n",
+    "ax[1].set_xlabel(\"time (s)\");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,55 +190,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from adaptive_latents import default_rwd_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "10",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "in_ds = NumpyTimedDataSource(A, t, time_offsets=(1,))\n",
-    "out_ds = NumpyTimedDataSource(beh, t, time_offsets=(1,))\n",
-    "\n",
-    "# define the adaptive_latents object\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=100, num_grad_q=3))\n",
-    "\n",
-    "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
-    "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
-    "reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape)\n",
-    "\n",
-    "class CustomAnimation(AnimationManager):\n",
-    "    n_rows = 1\n",
-    "    n_cols = 1\n",
-    "    figsize = (15,10)\n",
-    "    extension = \"mp4\"\n",
-    "    fps=10\n",
-    "\n",
-    "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
-    "        historical_observations = br.obs_ds.get_history()\n",
-    "\n",
-    "        # al.plotting_functions.show_data_2d(self.ax[0,0], historical_observations, bw, n=7)\n",
-    "        al.plotting_functions.show_bubbles_2d(self.ax[0,0], historical_observations, bw, n_sds=3)\n",
-    "        self.ax[0,0].set_title(f\"Step {step}\")\n",
-    "        \n",
-    "    def frame_draw_condition(self, step_number, bw):\n",
-    "        return (step_number % 10 == 0) and (step_number > 100)\n",
-    "        \n",
-    "# am = CustomAnimation()\n",
-    "am = None\n",
-    "\n",
-    "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True)\n",
-    "\n",
-    "br.run(limit=1000)"
+    "##### bw"
    ]
   },
   {
@@ -267,13 +204,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "al.plotting_functions.compare_metrics([br], offset=1)"
+    "in_ds = NumpyTimedDataSource(A, t, time_offsets=(0,1))\n",
+    "out_ds = NumpyTimedDataSource(beh, t, time_offsets=(0,1))\n",
+    "\n",
+    "# define the adaptive_latents object\n",
+    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=100, num_grad_q=1))\n",
+    "\n",
+    "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
+    "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
+    "reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape)\n",
+    "\n",
+    "class CustomAnimation(AnimationManager):\n",
+    "    n_rows = 1\n",
+    "    n_cols = 3\n",
+    "    figsize = (15,10)\n",
+    "    extension = \"mp4\"\n",
+    "    fps=10\n",
+    "\n",
+    "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
+    "        historical_observations, _ = br.obs_ds.get_history()\n",
+    "\n",
+    "        al.plotting_functions.show_active_bubbles_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        \n",
+    "    def frame_draw_condition(self, step_number, bw):\n",
+    "        condition = True\n",
+    "        condition = condition and (step_number % 1 == 0)\n",
+    "        condition = condition and (2900 < step_number < 3100)\n",
+    "        return condition\n",
+    "        \n",
+    "am = CustomAnimation()\n",
+    "# am = None\n",
+    "\n",
+    "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True)\n",
+    "\n",
+    "br.run(limit=None, save=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "%matplotlib inline\n",
+    "import importlib\n",
+    "importlib.reload(al.plotting_functions)\n",
+    "al.plotting_functions.compare_metrics([br], offset=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([0,1], [0,1], linewidth=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Some sort of continuity measure?"
@@ -377,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
