--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -157,7 +157,9 @@
     "\n",
     "fig, ax = plt.subplots(nrows=2)\n",
     "ax[0].plot(a[:,0], a[:,1], '.')\n",
-    "ax[1].plot(recovered_a[:,0], recovered_a[:,1], '.')"
+    "ax[0].axis(\"scaled\")\n",
+    "ax[1].plot(recovered_a[:,0], recovered_a[:,1], '.')\n",
+    "ax[1].axis('scaled')"
    ]
   },
   {
