--- a/scripts/visualization_maker.ipynb
+++ b/scripts/visualization_maker.ipynb
@@ -36,9 +36,16 @@
    "outputs": [],
    "source": [
     "mat = loadmat(al.CONFIG['data_path'] / 'Chestek' / 'first_extraction.mat', squeeze_me=True, simplify_cells=True)\n",
-    "pre_beh = mat[\"extracted\"][0]\n",
-    "pre_A = mat[\"extracted\"][3]\n",
-    "pre_t = np.arange(A.shape[0]) #mat[\"extracted\"][4]"
+    "pre_smooth_beh = mat[\"feats\"][1]\n",
+    "pre_smooth_A = mat[\"feats\"][0]\n",
+    "pre_smooth_t = mat[\"feats\"][2] / 1000\n",
+    "\n",
+    "pre_smooth_beh = pre_smooth_beh.reshape((pre_smooth_beh.shape[0], 3, 5))\n",
+    "\n",
+    "nonzero_columns = pre_smooth_beh.std(axis=0) > 0\n",
+    "assert np.all(~(nonzero_columns[0,:] ^ nonzero_columns)) # checks that fingers always have the same values\n",
+    "pre_smooth_beh = pre_smooth_beh[:,:,nonzero_columns[0,:]] # the booleans select for position, velocity, and acceleration\n",
+    "pre_smooth_beh = pre_smooth_beh[:, [True, False, False], :].reshape(pre_smooth_beh.shape[0], -1) # the three booleans select for position, velocity, and acceleration"
    ]
   },
   {
@@ -48,27 +55,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pre_A, pre_beh, pre_t, _ = al.input_sources.datasets.construct_nason20_dataset()\n",
     "\n",
-    "if False:\n",
-    "    # pre vs smoothed\n",
-    "    %matplotlib inline\n",
-    "    # pre_A, pre_beh, pre_t, _ = al.input_sources.datasets.construct_nason20_dataset()\n",
-    "    \n",
-    "    fig,ax = plt.subplots(nrows=2)\n",
-    "    ax[0].plot(pre_t, pre_A[:,0])\n",
-    "    signal = pre_A[:,0]\n",
-    "    \n",
-    "    kernel = np.exp(np.linspace(0,-1,5))\n",
-    "    kernel /= kernel.sum()\n",
-    "    ax[1].plot(kernel)\n",
-    "    \n",
-    "    mode = 'valid'\n",
-    "    smoothed = np.convolve(kernel, signal, mode)\n",
-    "    smoothed_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_t, mode)\n",
-    "    ax[0].plot(smoothed_t,smoothed)\n",
-    "    \n",
-    "    ax[0].set_xlim([400, 435])\n",
-    "    # ax[0].set_xlim([-10, 65])"
+    "fig,ax = plt.subplots(nrows=2, layout=\"tight\")\n",
+    "ax[0].plot(pre_smooth_t, pre_smooth_A[:,0])\n",
+    "signal = pre_smooth_A[:,0]\n",
+    "\n",
+    "kernel = np.exp(np.linspace(0,-1,5))\n",
+    "kernel /= kernel.sum()\n",
+    "ax[1].plot(kernel)\n",
+    "\n",
+    "mode = 'valid'\n",
+    "smoothed = np.convolve(kernel, signal, mode)\n",
+    "smoothed_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
+    "ax[0].plot(smoothed_t,smoothed)\n",
+    "\n",
+    "\n",
+    "ax[0].set_xlim([80, 100])\n",
+    "ax[0].set_ylim([10, 30])\n",
+    "ax[0].set_title(\"Original and smoothed data\")\n",
+    "ax[1].set_title(\"Convolution kernel\")"
    ]
   },
   {
@@ -78,39 +84,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_A = fin.center_from_first_n(pre_A, 100)\n",
-    "pre_A, pre_beh, pre_t = fin.clip(pre_A, pre_beh, pre_t)\n",
+    "mode = 'valid'\n",
+    "pre_prosvd_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_smooth_A.T])\n",
+    "pre_prosvd_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
+    "pre_prosvd_beh = pre_smooth_beh\n",
     "\n",
-    "# mode = 'valid'\n",
-    "# pre_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_A.T])\n",
-    "# pre_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_t, mode)\n",
     "\n",
-    "A, Qs = fin.prosvd_data_with_Qs(pre_A, 7, 50)\n",
-    "A, t, beh = fin.clip(A, pre_t, pre_beh)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
-   "source": [
-    "##### to skip"
+    "pre_prosvd_A = fin.center_from_first_n(pre_prosvd_A, 100)\n",
+    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = fin.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
+    "\n",
+    "\n",
+    "\n",
+    "pre_jpca_A, Qs = fin.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
+    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = fin.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pre_pro_A, raw_behavior, bin_centers, beh_t = al.input_sources.datasets.construct_indy_data(\n",
-    "#     individual_identifier=al.input_sources.datasets.individual_identifiers[\"indy\"][0], \n",
-    "#     bin_width=.03\n",
-    "# )\n",
-    "# resampled_behavior = al.input_sources.functional.resample_behavior(raw_behavior, bin_centers, beh_t)\n",
-    "# beh = resampled_behavior\n",
-    "# t = bin_centers"
+    "A, beh, t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "##### to skip"
    ]
   },
   {
@@ -121,7 +125,7 @@
    "outputs": [],
    "source": [
     "pca = PCA()\n",
-    "pca.fit(pre_A)\n",
+    "pca.fit(pre_prosvd_A)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "var_explained = np.cumsum([0] + list(pca.explained_variance_ratio_))\n",
@@ -208,7 +212,7 @@
     "out_ds = NumpyTimedDataSource(beh, t, time_offsets=(0,1))\n",
     "\n",
     "# define the adaptive_latents object\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=100, num_grad_q=1))\n",
+    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=1000, num_grad_q=1))\n",
     "\n",
     "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
     "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
@@ -235,8 +239,8 @@
     "        condition = condition and (2900 < step_number < 3100)\n",
     "        return condition\n",
     "        \n",
-    "am = CustomAnimation()\n",
-    "# am = None\n",
+    "# am = CustomAnimation()\n",
+    "am = None\n",
     "\n",
     "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True)\n",
     "\n",
@@ -250,6 +254,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls ../tests/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/home/jgould/Documents/AdaptiveLatents/tests\")\n",
+    "from test_speed import get_steady_state_speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_elapsed, steps_elapsed = get_steady_state_speed(pre_prosvd_A, beh, prosvd_k=4, bw_params={\"num\":1000}, max_steps=5000)\n",
+    "print(f\"{steps_elapsed/time_elapsed:.2f} it/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "%matplotlib inline\n",
     "import importlib\n",
@@ -260,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "20",
    "metadata": {},
    "source": [
     "### Some sort of continuity measure?"
@@ -374,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
