edits jpca and adds autoregression regressors

--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -231,7 +231,7 @@
     "ax[0].plot(a[:,0], a[:,1], '.')\n",
     "ax[0].axis(\"scaled\")\n",
     "ax[1].plot(recovered_a[:,0], recovered_a[:,1], '.')\n",
-    "ax[1].axis('scaled')"
+    "ax[1].axis('scaled');"
    ]
   },
   {
