edits jpca and adds autoregression regressors

--- a/scripts/streaming_jpca.ipynb
+++ b/scripts/streaming_jpca.ipynb
@@ -8,37 +8,26 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.linalg import block_diag\n",
     "from adaptive_latents.regressions import VanillaOnlineRegressor\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from adaptive_latents.input_sources import jpca\n",
+    "from adaptive_latents.bw_run import AnimationManager\n",
+    "import adaptive_latents\n",
+    "\n",
+    "from scipy.io import loadmat\n",
+    "\n",
     "rng = np.random.default_rng()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def make_H(d):\n",
-    "    h = []\n",
-    "    for i in range(0,d):\n",
-    "        for j in range(0,i):\n",
-    "            a = np.zeros((d,d))\n",
-    "            a[i,j] = 1\n",
-    "            a[j,i] = -1\n",
-    "            h.append(a.flatten())\n",
-    "    return np.column_stack(h)\n",
-    "\n",
-    "def test_make_H(dd=10):\n",
-    "    for d in range(2,dd):\n",
-    "        H = make_H(d)\n",
-    "        for _ in range(100):\n",
-    "            k = rng.normal(size=int(d*(d-1)/2))\n",
-    "            sksym = (H @ k).reshape((d,d))\n",
-    "            assert np.linalg.norm(np.real(np.linalg.eigvals(sksym))) < 1e-14\n",
-    "test_make_H()"
+    "## Load Data"
    ]
   },
   {
@@ -48,14 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m, n = 1000,3\n",
-    "H = make_H(n)\n",
-    "X = rng.random((m,n))\n",
-    "M = rng.random((n,n))\n",
-    "# k = rng.normal(size=int(n*(n-1)/2)); M = (H @ k).reshape(n,n)\n",
-    "\n",
-    "X_dot = X @ M\n",
-    "X = X"
+    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_buzaki_data(individual_identifier=adaptive_latents.input_sources.datasets.individual_identifiers[\"buzaki\"][0], bin_width=0.015)\n",
+    "obs = adaptive_latents.input_sources.prosvd_data(input_arr=obs, output_d=6, init_size=50)\n",
+    "obs = adaptive_latents.input_sources.functional.center_from_first_n(obs)"
    ]
   },
   {
@@ -65,16 +49,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_X_tilde(X, order='C'):\n",
-    "    m,n = X.shape\n",
-    "    if order=='C':\n",
-    "        X_tilde = np.zeros(shape=(m*n, n*n))\n",
-    "        for i in range(m):\n",
-    "            for j in range(n):\n",
-    "                X_tilde[i*n+j, j*n:(j+1)*n] = X[i]\n",
-    "    elif order == 'F':\n",
-    "        X_tilde = block_diag(*[X]* n)\n",
-    "    return X_tilde"
+    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_indy_data(\n",
+    "    adaptive_latents.input_sources.datasets.individual_identifiers[\"indy\"][0],\n",
+    "    bin_width=0.06,\n",
+    ")\n",
+    "obs = adaptive_latents.input_sources.prosvd_data(input_arr=obs, output_d=6, init_size=50)\n",
+    "obs = adaptive_latents.input_sources.functional.center_from_first_n(obs)"
    ]
   },
   {
@@ -84,28 +64,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order = 'C'\n",
-    "x_dot = X_dot.ravel(order)\n",
-    "X_tilde = make_X_tilde(X, order)\n",
-    "beta, residuals, rank, s = np.linalg.lstsq(X_tilde@H, x_dot, rcond=None)"
+    "data = loadmat(adaptive_latents.CONFIG[\"data_path\"] / 'church' / 'exampleData.mat', squeeze_me=True, simplify_cells=True)['Data']\n",
+    "A = []\n",
+    "times = data[0]['times']\n",
+    "for d in data:\n",
+    "    A.append(d['A'])\n",
+    "    assert np.all(times == d['times'])\n",
+    "A = np.array(A)\n",
+    "\n",
+    "\n",
+    "AA = np.array(A)\n",
+    "AA[:,-1,:] = np.nan\n",
+    "obs = AA.reshape((-1, 218))\n",
+    "\n",
+    "# obs -= np.nanmean(obs,axis=0)\n",
+    "obs = adaptive_latents.input_sources.prosvd_data(input_arr=obs, output_d=6, init_size=50)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "order = 'C'\n",
-    "betas = []\n",
-    "for init_size in range(m):\n",
-    "    W = (make_X_tilde(X[:init_size], order) @ H)\n",
-    "    D = np.linalg.pinv(W.T @ W)\n",
-    "    c = W.T @ X_dot[:init_size].ravel(order)\n",
-    "    betas.append(D@c)\n",
-    "betas = np.array(betas)\n",
-    "plt.plot(betas)"
+    "## Make a Movie"
    ]
   },
   {
@@ -115,34 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order = 'C'\n",
-    "betas_r = []\n",
-    "betas = []\n",
-    "init_size = 50\n",
-    "\n",
-    "W = (make_X_tilde(X[:init_size], order) @ H)\n",
-    "D = np.linalg.pinv(W.T @ W)\n",
-    "c = W.T @ X_dot[:init_size].ravel(order)\n",
-    "\n",
-    "\n",
-    "D_r = np.array(D)\n",
-    "c_r = np.array(c)\n",
-    "for i in range(init_size,m):\n",
-    "    rows = make_X_tilde(X[i,None], order) @ H\n",
-    "    for j in range(n):\n",
-    "        row = (rows[j, None]).T\n",
-    "        D_r = D_r - (D_r @ row @ row.T @ D_r) / (1 + row.T @ D_r @ row)\n",
-    "        c_r += row.flatten() * X_dot[i,j]\n",
-    "    betas_r.append(D_r@c_r)\n",
-    "\n",
-    "    W = (make_X_tilde(X[:i], order) @ H)\n",
-    "    beta, _, _, _ = np.linalg.lstsq(W, X_dot[:i].ravel(order), rcond=None)\n",
-    "    betas.append(beta)\n",
-    "betas_r = np.squeeze(betas_r)\n",
-    "betas = np.squeeze(betas)\n",
-    "# plt.plot(betas, 'k')\n",
-    "plt.plot(betas_r- betas)\n",
-    "np.linalg.norm(betas - betas_r)"
+    "m, n = 2000, 4\n",
+    "X, _, true_variables = jpca.generate_circle_embedded_in_high_d(rng,m=2000,n=4)"
    ]
   },
   {
@@ -152,37 +107,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_H(d):\n",
-    "    h = []\n",
-    "    for i in range(0,d):\n",
-    "        for j in range(0,i):\n",
-    "            a = np.zeros((d,d))\n",
-    "            a[i,j] = 1\n",
-    "            a[j,i] = -1\n",
-    "            h.append(a.flatten())\n",
-    "    return np.column_stack(h)\n",
+    "X = obs\n",
+    "true_variables = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomAnimation(AnimationManager):\n",
+    "    n_rows = 1\n",
+    "    n_cols = 1\n",
+    "    fps = 40\n",
+    "    def draw_frame(self, step, history):\n",
+    "        self.ax[0,0].cla()\n",
+    "        self.ax[0,0].plot(history[-100:,0], history[-100:,1])\n",
+    "        self.ax[0,0].set_title(f\"step {step}\")\n",
+    "        self.movie_writer.grab_frame()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, X_dot = jpca.X_and_X_dot_from_data(X)\n",
+    "m, n = X.shape\n",
     "\n",
-    "def make_X_tilde(X, order='C'):\n",
-    "    m,n = X.shape\n",
-    "    if order=='C':\n",
-    "        X_tilde = np.zeros(shape=(m*n, n*n))\n",
-    "        for i in range(m):\n",
-    "            for j in range(n):\n",
-    "                X_tilde[i*n+j, j*n:(j+1)*n] = X[i]\n",
-    "    elif order == 'F':\n",
-    "        X_tilde = block_diag(*[X]* n)\n",
-    "    return X_tilde\n",
-    "\n",
+    "H = jpca.make_H(n)\n",
     "reg = VanillaOnlineRegressor(input_d=H.shape[1], output_d=1, init_min_ratio=2)\n",
     "\n",
-    "for i in range(X.shape[0]):\n",
-    "    rows = make_X_tilde(X[i,None]) @ H\n",
+    "am = CustomAnimation()\n",
+    "observations = []\n",
+    "errors = []\n",
+    "for i in tqdm(range(X.shape[0])):\n",
+    "    rows = jpca.make_X_tilde(X[i, None]) @ H\n",
     "    for j in range(n):\n",
     "        x = rows[j]\n",
-    "        y = X_dot[i,j]\n",
+    "        y = X_dot[i, j]\n",
     "        reg.safe_observe(x, y)\n",
+    "    U = jpca.U_from_beta(reg.get_beta(), n)\n",
+    "    observations.append(X[i] @ U)\n",
+    "    if i > 6000:\n",
+    "        am.draw_frame(i,np.array(observations))\n",
+    "    if true_variables is not None:\n",
+    "        try:\n",
+    "            A,B = jpca.align_column_spaces(U[:,:2], true_variables['C'])\n",
+    "            errors.append(np.linalg.norm(A-B))\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            errors.append(np.nan)\n",
     "\n",
-    "reg.get_beta().T - betas[-1]"
+    "observations = np.array(observations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "am.set_final_output_location(\"/home/jgould/Documents/AdaptiveLatents/scripts/generated/other/animation.mp4\")\n",
+    "am.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mv ./movie.mp4 ../generated/other/animation.mp4"
    ]
   }
  ],
