--- a/scripts/visualization_maker.ipynb
+++ b/scripts/visualization_maker.ipynb
@@ -212,11 +212,11 @@
     "out_ds = NumpyTimedDataSource(beh, t, time_offsets=(0,1))\n",
     "\n",
     "# define the adaptive_latents object\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=1000, num_grad_q=1))\n",
+    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=500, num_grad_q=1))\n",
     "\n",
     "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
     "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
-    "reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape)\n",
+    "reg = al.regressions.HistoricalSNR(input_d=bw.N, output_d=out_ds.output_shape, init_min_ratio=.5)\n",
     "\n",
     "class CustomAnimation(AnimationManager):\n",
     "    n_rows = 1\n",
@@ -228,7 +228,7 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.obs_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_active_bubbles_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
     "        self.ax[0,1].set_title(f\"Step {step}\")\n",
     "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
     "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
@@ -236,15 +236,15 @@
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
     "        condition = condition and (step_number % 1 == 0)\n",
-    "        condition = condition and (2900 < step_number < 3100)\n",
+    "        condition = condition and (1500 < step_number < 1600)\n",
     "        return condition\n",
     "        \n",
-    "# am = CustomAnimation()\n",
-    "am = None\n",
+    "am = CustomAnimation()\n",
+    "# am = None\n",
     "\n",
     "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True)\n",
     "\n",
-    "br.run(limit=None, save=True)"
+    "br.run(limit=1600, save=True)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pwd"
+    "reg.get_beta()"
    ]
   },
   {
