--- a/scripts/replicate_rios_thing.ipynb
+++ b/scripts/replicate_rios_thing.ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "# os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
+    "\n",
     "import scipy\n",
     "import numpy as np\n",
     "from main import main\n",
@@ -117,7 +119,28 @@
     "import adaptive_latents.plotting_functions as bpf\n",
     "from adaptive_latents.regressions import NearestNeighborRegressor\n",
     "from proSVD import proSVD\n",
-    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, default_rwd_parameters, AnimationManager, BWRun, SymmetricNoisyRegressor\n",
+    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, default_rwd_parameters, AnimationManager, BWRun, SymmetricNoisyRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax.lib import xla_bridge\n",
+    "xla_bridge.get_backend().platform\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "def main(Y, X, steps_to_run=None, nBubbles=200, svd = False):\n",
     "    # if svd == True:\n",
@@ -158,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "X, Y = loadFile('N_MC')\n",
     "brs = []\n",
-    "for i in range(1, 10):\n",
+    "for i in range(2, 3):\n",
     "    decomp = reducePSVD(Y.T, i)\n",
     "\n",
     "    X = X[:,-decomp.shape[1]:]\n",
@@ -206,7 +229,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, Y = loadFile('N_MC')\n",
+    "brs = []\n",
+    "for i in range(2, 3):\n",
+    "    decomp = reducePSVD(Y.T, i)\n",
+    "\n",
+    "    X = X[:,-decomp.shape[1]:]\n",
+    "    br = main(decomp, X, nBubbles=100)\n",
+    "    brs.append(br) \n",
+    "    bpf.compare_metrics([br], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +257,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br.behavior_error_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
